Rename to Handoff, audit fixes, self-hosted fonts, review page, and production cleanup
Rename project from Relay to Handoff throughout. Implement all 12 audit
recommendations: error boundary, two-step Start Fresh confirmation, copy
reframe (letter of instruction → Handoff document), review/summary page,
self-hosted fonts (zero external requests), lazy-loaded jsPDF, draw/type
signature toggle, emergency quick-reference PDF page, device access field,
digital legacy contacts, "tell someone" guidance, and shortened placeholders.
Remove theme editor and agentation from production. Add Vercel SPA rewrites.
Update README with app icon and live link.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "relay-app",
+  "name": "handoff-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -32,7 +32,6 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "agentation": "^2.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
